--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 txhash.txt
 blockhash.txt
 *.sqlite
+.idea/workspace.xml
+.idea/*
+Create Transactions Table.sql
+Create Blocks Tables.sql
+Query blocks.sql
